--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "wsl-electron",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
+  "author": "",
   "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^10.1.3"
+  "dependencies": {
+    "electron": "^6.1.12"
   }
 }
